# BlindCommunicator

BlindCommunicatorApp/app/: build.gradle
BlindCommunicatorApp/app/src/main/cpp/: CMakeLists.txt
BlindCommunicatorApp/app/src/main/cpp/I2C/: CMakeLists.txt  I2C.c  I2C.h
BlindCommunicatorApp/app/src/main/cpp/lkflib/: CMakeLists.txt  lkflib.cpp
BlindCommunicatorApp/app/src/main/cpp/silabs/: CMakeLists.txt  FMRXautoseek.c  FMRXtest.c  commanddefs.h  io.h  io2w.c  si47xx_low.c  typedefs.h
BlindCommunicatorApp/app/src/main/java/ar/com/lrusso/blindcommunicator/app/: BlindCommunicatorService.java  GlobalVars.java  Main.java  SettingsApp.java
BlindCommunicatorApp/app/src/main/java/fmradio/: SI47XX.java
BlindCommunicatorApp/app/src/main/res/layout/: alarms.xml  main.xml  settings.xml
BlindCommunicatorApp/app/src/main/res/values/: strings.xml
BlindCommunicatorApp/app/src/main/res/values-de/: strings.xml
BlindCommunicatorApp/app/src/main/res/values-es/: strings.xml
BlindCommunicatorApp/app/src/main/res/values-fr/: strings.xml
BlindCommunicatorApp/app/src/main/res/values-id/: strings.xml
BlindCommunicatorApp/app/src/main/res/values-ru/: strings.xml
BlindCommunicatorApp/gradle/wrapper/: gradle-wrapper.properties
